--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "vue-demo-sale-platform",
   "version": "2.0.0",
   "description": "a demo sale platform use vue2.0",
-  "author": "fishenal <yu_dong_han@hotmail.com>",
+  "author": "lxc <xiaochang_li@foxmail.com>",
   "scripts": {
     "dev": "node build/dev-server.js --host 0.0.0.0",
     "start": "npm run dev",
     "build": "node build/build.js"
   },
-  "repository": "https://github.com/fishenal/Vuejs-SalePlatform",
+  "repository": "https://github.com/lxccc1207/vue-shop",
   "dependencies": {
     "axios": "^0.17.1",
     "babel-cli": "^6.26.0",
